--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 ---
-layout: default
+layout: home
 ---
 
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="todo">
-      </div>
     </div>
   </div>
   <div class="row">
