--- a/index.html
+++ b/index.html
@@ -2,13 +2,5 @@
 layout: home
 ---
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-    </div>
-  </div>
-</div>
+{% include home.html %}
+{% include posts.html %}
