Contacts and Join updated

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: home
 title: Contacts
-permalink: /contact.html
+permalink: /contact/
 ---
 
 {% include contacts.html %}
