Calling it for v1.0

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,18 @@ layout: default
 <section id="posts" class="py-5">
   <div class="row">
     <div class="col">
+      <h2>The NEMES Projects Archive</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col">
+      <h4>Project writeups from over the years.</h4>
+    </div>
+    <div class="col-1"></div>
+  </div>
+  <div class="row">
+    <div class="col">
       {% for post in site.tags.projects %}
         <div class="row">
           <div class="col-1"></div>
